RESOLVED FIXED171081
-[WKUIDelegatePrivate _webView:requestUserMediaAuthorizationForMicrophone:camera:url:mainFrameURL:decisionHandler:] decision handler should only have one parameter.
https://bugs.webkit.org/show_bug.cgi?id=171081
Summary -[WKUIDelegatePrivate _webView:requestUserMediaAuthorizationForMicrophone:cam...
Andrew Gold
Reported 2017-04-20 15:38:39 PDT
Since user media authorization is all or nothing (we will not authorize access to just one device if multiple are requested), the decision handler should only have one parameter.
Attachments
Proposed patch. (7.67 KB, patch)
2017-04-20 18:11 PDT, Andrew Gold
no flags
proposed patch v2. (9.36 KB, patch)
2017-04-20 18:33 PDT, Andrew Gold
no flags
Andrew Gold
Comment 1 2017-04-20 18:11:00 PDT
Created attachment 307670 [details] Proposed patch.
Build Bot
Comment 2 2017-04-20 18:13:21 PDT
Attachment 307670 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebViewPrivate.h:56: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andrew Gold
Comment 3 2017-04-20 18:33:02 PDT
Created attachment 307672 [details] proposed patch v2.
Build Bot
Comment 4 2017-04-20 18:35:15 PDT
Attachment 307672 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebViewPrivate.h:56: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 5 2017-04-21 11:33:01 PDT
Comment on attachment 307672 [details] proposed patch v2. Clearing flags on attachment: 307672 Committed r215619: <http://trac.webkit.org/changeset/215619>
WebKit Commit Bot
Comment 6 2017-04-21 11:33:03 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2017-04-21 18:36:13 PDT
Note You need to log in before you can comment on or make changes to this bug.